Fix category list color on mobile

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -20,7 +20,7 @@ body {
   border-bottom: 0px;
   border-top: 0px;
   margin: 30px 10px;
-  background: white;
+  background: $highlight;
   border-radius: 6px;
   box-shadow: rgba(0, 0, 0, 0.07) 0px 4px 6px 0px;
 }
